--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <span class="name">Multi-Apps Bootstraping</span>
 </header>
 <main class="content">
-  <app-chat></app-chat>
+  <button (click)="onClick()">Bootstrap Chat</button>
   <app-home-page></app-home-page>
 </main>
 
